--- a/foro.html
+++ b/foro.html
@@ -47,15 +47,16 @@
    <li id="active"><a href="foro.html" class="active daddy">Foro</a>
    <ul>
       <li><a href="materiales2.html" class="no-ch">Materiales</a></li>
-      <li><a href="actividad.html" class="no-ch">Actividad</a></li>
+      <li><a href="participacin.html" class="no-ch">Participación</a></li>
    </ul>
    </li>
    <li><a href="laboratorio.html" class="daddy">Laboratorio</a>
    <ul class="other-section">
-      <li><a href="materiales3.html" class="no-ch">Materiales</a></li>
-      <li><a href="actividad0.html" class="no-ch">Actividad</a></li>
+      <li><a href="informe_de_laboratorio.html" class="no-ch">Informe de laboratorio</a></li>
    </ul>
    </li>
+   <li><a href="seguimiento.html" class="no-ch">Seguimiento</a></li>
+   <li><a href="buzn.html" class="no-ch">Buzón</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
@@ -66,15 +67,33 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Foro</h1></header>
-<article class="iDevice_wrapper textIdevice em_iDevice" id="id65">
-<div class="iDevice emphasis1" >
-<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">PRESENTACION DE LA TEMATICA </h1></header>
-<div class="iDevice_inner">
-<div class="iDevice_content_wrapper">
+<article class="iDevice_wrapper textIdevice" id="id65">
+<div class="iDevice emphasis0" >
 <div id="ta65_172_2" class="block iDevice_content">
-<div class="exe-text"><p>PARA DEBATE BREVE INTRODUCCIÓN, PAUTAS PARA EL DEBATE  Y VIDEO </p></div>
+<div class="exe-text"><h2 style="text-align: center; color: #2c3e50;">Reflexiones sobre un planeta plástico</h2>
+<p style="text-align: justify; font-size: 16px;">En este foro analizaremos cómo la contaminación por <strong>microplásticos</strong> afecta los ecosistemas y nuestra vida cotidiana, relacionando la <strong>química de los polímeros</strong> con la <strong>expresión artística y ambiental</strong>. A través del video musical <em>“Pirate Jet – Plastic Beach”</em> de <strong>Gorillaz</strong>, reflexionaremos sobre el consumo desmedido, el impacto del plástico en los océanos y la necesidad de buscar alternativas sostenibles, como los <strong>bioplásticos</strong>.</p>
+<p style="text-align: justify; font-size: 16px;">Este espacio también servirá de base para el laboratorio <strong>“De la leche al bioplástico”</strong>, donde se explorará experimentalmente cómo los <strong>grupos funcionales –COOH y –NH₂</strong> permiten obtener un material biodegradable. Así el foro busca integrar la reflexión ambiental, la ciencia y la creatividad.</p>
+<div style="text-align: center; margin: 20px 0;"><iframe width="900" height="506" src="https://www.youtube.com/embed/wIXALxQ3_4M?si=shXH3ARIEeuNldHK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="allowfullscreen"></iframe></div>
+<h3 style="color: #16a085;"> Pautas para el debate</h3>
+<ol style="font-size: 16px; line-height: 1.6;">
+<li>Visualiza el video <em>“Pirate Jet – Plastic Beach”</em> de Gorillaz.</li>
+<li>Revisa los materiales complementarios sobre <strong>microplásticos</strong> y su <strong>impacto ambiental</strong>.</li>
+<li>Realiza un aporte al foro en una de estas dos formas:
+<ul>
+<li>✍️ Un <strong>texto reflexivo corto</strong> (5–10 líneas) sobre lo que te inspiró el video o cómo relacionas la contaminación por microplásticos con la química.</li>
+<li>🎶 Una <strong>canción, poema o creación artística</strong> que exprese tu opinión sobre la temática.</li>
+</ul>
+</li>
+<li>Comenta al menos un aporte de un compañero, fomentando un <strong>diálogo respetuoso y argumentado</strong>.</li>
+</ol>
+<p style="font-size: 15px; color: #34495e; text-align: center; margin-top: 25px;">🌱 <em>Recuerda: este foro busca unir arte, ciencia y conciencia ambiental a través del pensamiento crítico y la creatividad.</em></p></div>
 </div>
 </div>
+</article>
+<article class="iDevice_wrapper textIdevice" id="id185">
+<div class="iDevice emphasis0" >
+<div id="ta185_185_2" class="block iDevice_content">
+<div class="exe-text"><h4 style="text-align: center;"><a href="materiales2.html">Materiales</a></h4></div>
 </div>
 </div>
 </article>
