--- a/index.html
+++ b/index.html
@@ -50,15 +50,16 @@
    <li><a href="foro.html" class="daddy">Foro</a>
    <ul class="other-section">
       <li><a href="materiales2.html" class="no-ch">Materiales</a></li>
-      <li><a href="actividad.html" class="no-ch">Actividad</a></li>
+      <li><a href="participacin.html" class="no-ch">Participación</a></li>
    </ul>
    </li>
    <li><a href="laboratorio.html" class="daddy">Laboratorio</a>
    <ul class="other-section">
-      <li><a href="materiales3.html" class="no-ch">Materiales</a></li>
-      <li><a href="actividad0.html" class="no-ch">Actividad</a></li>
+      <li><a href="informe_de_laboratorio.html" class="no-ch">Informe de laboratorio</a></li>
    </ul>
    </li>
+   <li><a href="seguimiento.html" class="no-ch">Seguimiento</a></li>
+   <li><a href="buzn.html" class="no-ch">Buzón</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
