--- a/materiales1.html
+++ b/materiales1.html
@@ -47,15 +47,16 @@
    <li><a href="foro.html" class="daddy">Foro</a>
    <ul class="other-section">
       <li><a href="materiales2.html" class="no-ch">Materiales</a></li>
-      <li><a href="actividad.html" class="no-ch">Actividad</a></li>
+      <li><a href="participacin.html" class="no-ch">Participación</a></li>
    </ul>
    </li>
    <li><a href="laboratorio.html" class="daddy">Laboratorio</a>
    <ul class="other-section">
-      <li><a href="materiales3.html" class="no-ch">Materiales</a></li>
-      <li><a href="actividad0.html" class="no-ch">Actividad</a></li>
+      <li><a href="informe_de_laboratorio.html" class="no-ch">Informe de laboratorio</a></li>
    </ul>
    </li>
+   <li><a href="seguimiento.html" class="no-ch">Seguimiento</a></li>
+   <li><a href="buzn.html" class="no-ch">Buzón</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
@@ -66,6 +67,18 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Materiales</h1></header>
+<article class="iDevice_wrapper textIdevice em_iDevice" id="id68">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Videos. infografias documentos y demas material</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta68_175_2" class="block iDevice_content">
+<div class="exe-text"><p><br />PARA FORTALECER CONCEPTOS AL ESTUDIANTE O ABORDAR MAS A DETALLE TEMATICA</p></div>
+</div>
+</div>
+</div>
+</div>
+</article>
 <article class="iDevice_wrapper textIdevice em_iDevice em_iDevice_exit_black" id="id132">
 <div class="iDevice emphasis1" >
 <header class="iDevice_header" style="background-image:url(icon_exit_black.png)"><span class="iDeviceTitle">&nbsp;</span></header>
@@ -880,6 +893,13 @@
 <div class="particle-light"></div>
 <div class="particle-light"></div>
 </div></div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper textIdevice" id="id180">
+<div class="iDevice emphasis0" >
+<div id="ta180_175_2" class="block iDevice_content">
+<div class="exe-text"><p><a href="actividades1.html">CONTINUAR</a></p></div>
 </div>
 </div>
 </article>
