--- a/seguimiento.html
+++ b/seguimiento.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Laboratorio | Entre carbonos y saberes </title>
+<title>Seguimiento | Entre carbonos y saberes </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -14,9 +14,12 @@
 <script type="text/javascript" src="exe_jquery.js"></script>
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
+<script type="text/javascript" src="html2canvas.js"></script>
+<link rel="stylesheet" type="text/css" href="informe-activity.css" />
+<script type="text/javascript" src="informe-activity.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
-<body class="exe-web-site" id="exe-node-5"><script type="text/javascript">document.body.className+=" js"</script>
+<body class="exe-web-site" id="exe-node-34"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
 <header id="header" ><div id="headerContent">Entre carbonos y saberes</div></header>
@@ -50,95 +53,38 @@
       <li><a href="participacin.html" class="no-ch">Participación</a></li>
    </ul>
    </li>
-   <li id="active"><a href="laboratorio.html" class="active daddy">Laboratorio</a>
-   <ul>
+   <li><a href="laboratorio.html" class="daddy">Laboratorio</a>
+   <ul class="other-section">
       <li><a href="informe_de_laboratorio.html" class="no-ch">Informe de laboratorio</a></li>
    </ul>
    </li>
-   <li><a href="seguimiento.html" class="no-ch">Seguimiento</a></li>
+   <li id="active"><a href="seguimiento.html" class="active no-ch">Seguimiento</a></li>
    <li><a href="buzn.html" class="no-ch">Buzón</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="participacin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="informe_de_laboratorio.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="informe_de_laboratorio.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="buzn.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
 <section id="main">
-<header id="nodeDecoration"><h1 id="nodeTitle">Laboratorio</h1></header>
-<article class="iDevice_wrapper textIdevice em_iDevice" id="id63">
+<header id="nodeDecoration"><h1 id="nodeTitle">Seguimiento</h1></header>
+<article class="iDevice_wrapper InformeIdevice em_iDevice" id="id173">
 <div class="iDevice emphasis1" >
-<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">De la Leche al Bioplástico: Una Alternativa a los Hidrocarburos</h1></header>
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Informe de progreso</h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
-<div id="ta63_170_2" class="block iDevice_content">
-<div class="exe-text"><hr />
-<p style="text-align: center;"><strong><em>Sintetizar un bioplástico a partir de la caseína presente en la leche mediante la reacción con vinagre, para observar el proceso de formación del material y comparar sus propiedades físicas con las de los plásticos convencionales derivados del petróleo. Con ello, se busca analizar alternativas sostenibles, promover la reflexión sobre el impacto ambiental de los plásticos sintéticos y reconocer la importancia de desarrollar materiales biodegradables en la vida cotidiana.</em></strong></p>
-<hr />
-<p></p></div>
+<div id="ta173_168_2" class="block iDevice_content">
+<div class="informe-IDevice"><div class="informe-DataGame js-hidden">{"typeGame":"Evaluación","evaluationID":"ACTIVIDAD","number":5,"showDate":true,"showTypeGame":true,"activeLinks":true,"userData":true,"msgs":{"msgSummary":"Resumen de las actividades","msgNoCompletedActivities":"Aún no has realizado ninguna de las actividades evaluables propuestas en este recurso educativo.","msgNoPendientes":"Número de actividades pendientes: %s.","msgCompletedActivities":"La siguiente tabla recoge los resultados que has obtenido en las actividades evaluables propuestas en este recurso educativo que ya has completado.","msgAverageScore":"Nota media","msgReboot":"Reiniciar","msgReload":"Actualizar","mssActivitiesNumber":"Nº Actividades: %s","msgActivitiesCompleted":"Completadas: %s","msgAverageScore1":"Nota media: %s","msgAverageScoreCompleted":"Nota media de las actividades completadas: %s","msgDelete":"Esto eliminará las puntuaciones almacenadas de todas las actividades ¿Estás seguro de que deseas continuar?","msgSections":"Secciones del recurso educativo","msgSave":"Guardar","msgReport":"informe_de_progreso","msgReportTitle":"Informe de progreso","msgType":"Tipo","msgSeeActivity":"Ir a la actividad","mgsSections":"Secciones del recurso educativo","msgName":"Nombre","msgDate":"Fecha","msgNotCompleted":"Sin completar","msgNotData":"Error al recuperar los datos"}}</div><div class="informe-bns js-hidden">undefined</div></div>
 </div>
 </div>
 </div>
 </div>
 </article>
-<article class="iDevice_wrapper textIdevice em_iDevice" id="id195">
-<div class="iDevice emphasis1" >
-<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">VIDEO OVA</h1></header>
-<div class="iDevice_inner">
-<div class="iDevice_content_wrapper">
-<div id="ta195_193_2" class="block iDevice_content">
-<div class="exe-text"><p>2 MINUTOS FORMATO REEL</p></div>
-</div>
-</div>
-</div>
-</div>
-</article>
-<article class="iDevice_wrapper textIdevice" id="id199">
+<article class="iDevice_wrapper textIdevice" id="id182">
 <div class="iDevice emphasis0" >
-<div id="ta199_197_2" class="block iDevice_content">
-<div class="exe-text"><p></p>
-<style>
-        body {
-            margin: 0;
-            padding: 20px;
-            background-color: #f5f5f5;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-        .pdf-container {
-            width: 100%;
-            height: 800px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-    </style>
-<div class="container">
-<h2 style="text-align: center;"><span style="background-color: #ffcc00;">PROTOCOLO</span></h2>
-<div class="pdf-container"><iframe width="100%" height="100%" src="https://drive.google.com/file/d/1qdBAMYTji8MUi0v82tQ9PWaH6AAxyy6p/preview" frameborder="0">
-            </iframe></div>
-<div style="margin-top: 20px; text-align: center;"><a href="https://drive.google.com/file/d/1qdBAMYTji8MUi0v82tQ9PWaH6AAxyy6p/view" target="_blank" style="background: #4CAF50; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px;" rel="noopener"> 📥 Descargar PDF </a></div>
-</div></div>
-</div>
-</div>
-</article>
-<article class="iDevice_wrapper textIdevice" id="id200">
-<div class="iDevice emphasis0" >
-<div id="ta200_198_2" class="block iDevice_content">
-<div class="exe-text"><h4 style="text-align: center;"><a href="informe_de_laboratorio.html">Sube tu informe de laboratorio</a></h4></div>
-</div>
-</div>
-</article>
-<article class="iDevice_wrapper textIdevice" id="id155">
-<div class="iDevice emphasis0" >
-<div id="ta155_152_2" class="block iDevice_content">
+<div id="ta182_177_2" class="block iDevice_content">
 <div class="exe-text"><p></p>
 <style>
         .chemistry-background-light {
@@ -572,7 +518,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="participacin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="informe_de_laboratorio.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="informe_de_laboratorio.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="buzn.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
