--- a/materiales0.html
+++ b/materiales0.html
@@ -47,15 +47,16 @@
    <li><a href="foro.html" class="daddy">Foro</a>
    <ul class="other-section">
       <li><a href="materiales2.html" class="no-ch">Materiales</a></li>
-      <li><a href="actividad.html" class="no-ch">Actividad</a></li>
+      <li><a href="participacin.html" class="no-ch">Participación</a></li>
    </ul>
    </li>
    <li><a href="laboratorio.html" class="daddy">Laboratorio</a>
    <ul class="other-section">
-      <li><a href="materiales3.html" class="no-ch">Materiales</a></li>
-      <li><a href="actividad0.html" class="no-ch">Actividad</a></li>
+      <li><a href="informe_de_laboratorio.html" class="no-ch">Informe de laboratorio</a></li>
    </ul>
    </li>
+   <li><a href="seguimiento.html" class="no-ch">Seguimiento</a></li>
+   <li><a href="buzn.html" class="no-ch">Buzón</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
@@ -651,6 +652,13 @@
 </div></div>
 </div>
 </div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper textIdevice" id="id176">
+<div class="iDevice emphasis0" >
+<div id="ta176_171_2" class="block iDevice_content">
+<div class="exe-text"><p><a href="actividades0.html">CONTINUAR</a></p></div>
 </div>
 </div>
 </article>
